--- a/styles/styles.css
+++ b/styles/styles.css
@@ -111,6 +111,14 @@ section h3 {
   float: left;
 }
 
+@media screen and (max-width: 700px) {
+  .card {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .card:hover {
   box-shadow: 0 6px 12px 0 grey;
 }
