--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 body {
-  margin: 0px;
-  padding: 0px;
-  background-color: #eee;
+  margin: 0;
+  padding: 0;
+  background: #eee;
 }
 
 .logo {
@@ -9,7 +9,7 @@ body {
   width: 42px;
   height: 42px;
   margin: 4px 0 0 10px;
-  background-color: black;
+  background: black;
   border-radius: 10px;
 }
 
@@ -26,24 +26,24 @@ body {
   line-height: 42px;
 }
 
-h1 {
+.header_title {
   margin: 4px 40px 0 10px;
   padding: 0;
   font-size: 22px;
 }
 
-h5 {
+.header_subtitle {
   margin: 0 10px 0 10px;
-  color: #6C9A33;
+  color: #6c9a33;
   padding: 0;
 }
 
 nav ul {
   list-style-type: none;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  background-color: white;
+  background: white;
   box-shadow: 0px 5px 5px grey;
   width: 100%;
 }
@@ -61,22 +61,26 @@ nav li a {
 }
 
 nav li a:hover {
-  background-color: #94c160;
+  background: #94c160;
 }
 
 @media screen and (max-width: 700px) {
-  nav li, nav li.rightlink {
+  nav li {
+    float: none;
+  }
+
+  nav li.rightlink {
     float: none;
   }
 }
 
 .rightlink {
   float: right;
-  background-color: white;
+  background: white;
 }
 
 .active {
-  background-color: #94c160;
+  background: #94c160;
 }
 
 .link_icons {
@@ -94,28 +98,55 @@ section {
   overflow: hidden;
 }
 
-section h3 {
+.section_headers {
   border-bottom: 1px solid grey;
+}
+
+.flex_container {
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .card {
   margin: 10px;
   padding: 0;
-  background-color: white;
+  background: white;
   border: 1px solid #bbb;
-  width: 300px;
-  height: 350px;
+  width: 350px;
   border-radius: 10px;
   box-shadow: 0 2px 6px 0 lightgrey;
   transition: 0.3s;
-  float: left;
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 1050px) {
   .card {
-    float: none;
+    width: 31%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .card {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 501px) and (max-width: 700px) {
+  .card {
+    width: 500px;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+
+@media screen and (min-width:701px) and (max-width: 1050px) {
+  .card {
+    width: 46%;
+  }
+}
+
+@media screen and (min-width: 1600px) {
+  .card {
+    width: 500px;
   }
 }
 
@@ -125,30 +156,30 @@ section h3 {
 
 .card_image {
   width: 100%;
-  height: 200px;
   border-radius: 10px 10px 0 0;
+  object-fit: contain;
 }
 
-.card h4 {
+.project_title {
   margin: 0;
   padding: 0;
   padding-left: 10px;
 }
 
-.card h5 {
+.project_language {
   margin: 0;
   padding: 0;
   padding-left: 10px;
-  color: #6C9A33;
+  color: #6c9a33;
 }
 
-.card p {
+.project_desc {
   margin: 0;
   padding: 10px;
 }
 
 footer {
-  background-color: black;
+  background: black;
   color: white;
   width: 100%;
   position: relative;
